--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -24,6 +24,7 @@
 .layout-navbar-fixed .layout-wrapper:not(.layout-horizontal):not(.layout-without-menu) .layout-page {
   padding-top: 76px !important;
 }
+
 /* Default navbar */
 .layout-navbar-fixed .layout-wrapper:not(.layout-without-menu) .layout-page {
   padding-top: 64px !important;
@@ -38,36 +39,39 @@
 * Content
 ******************************************************************************/
 
-.demo-blocks > * {
+.demo-blocks>* {
   display: block !important;
 }
 
-.demo-inline-spacing > * {
+.demo-inline-spacing>* {
   margin: 1rem 0.375rem 0 0 !important;
 }
 
 /* ? .demo-vertical-spacing class is used to have vertical margins between elements. To remove margin-top from the first-child, use .demo-only-element class with .demo-vertical-spacing class. For example, we have used this class in forms-input-groups.html file. */
-.demo-vertical-spacing > * {
+.demo-vertical-spacing>* {
   margin-top: 1rem !important;
   margin-bottom: 0 !important;
 }
-.demo-vertical-spacing.demo-only-element > :first-child {
+
+.demo-vertical-spacing.demo-only-element> :first-child {
   margin-top: 0 !important;
 }
 
-.demo-vertical-spacing-lg > * {
+.demo-vertical-spacing-lg>* {
   margin-top: 1.875rem !important;
   margin-bottom: 0 !important;
 }
-.demo-vertical-spacing-lg.demo-only-element > :first-child {
+
+.demo-vertical-spacing-lg.demo-only-element> :first-child {
   margin-top: 0 !important;
 }
 
-.demo-vertical-spacing-xl > * {
+.demo-vertical-spacing-xl>* {
   margin-top: 5rem !important;
   margin-bottom: 0 !important;
 }
-.demo-vertical-spacing-xl.demo-only-element > :first-child {
+
+.demo-vertical-spacing-xl.demo-only-element> :first-child {
   margin-top: 0 !important;
 }
 
@@ -98,9 +102,11 @@
   flex-direction: column;
   margin-top: 1rem;
 }
+
 .layout-demo-placeholder img {
   width: 900px;
 }
+
 .layout-demo-info {
   text-align: center;
   margin-top: 1rem;
@@ -108,20 +114,22 @@
 
 
 .video-container {
-  position:relative;
-  padding-bottom:56.25%;
-  padding-top:30px;
-  height:78vh;
-  background-color:white;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 78vh;
+  background-color: white;
 }
 
-.video-container iframe, .video-container object, .video-container embed {
-  position:absolute;
-  top:0;
-  background-color:white;
-  left:0;
-  width:100%;
-  height:100%;
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  background-color: white;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -140,6 +148,7 @@
   line-height: 22px;
   cursor: text;
 }
+
 .bootstrap-tagsinput input {
   border: none;
   box-shadow: none;
@@ -150,64 +159,74 @@
   width: auto;
   max-width: inherit;
 }
+
 .bootstrap-tagsinput.form-control input::-moz-placeholder {
   color: #777;
   opacity: 1;
 }
+
 .bootstrap-tagsinput.form-control input:-ms-input-placeholder {
   color: #777;
 }
+
 .bootstrap-tagsinput.form-control input::-webkit-input-placeholder {
   color: #777;
 }
+
 .bootstrap-tagsinput input:focus {
   border: none;
   box-shadow: none;
 }
+
 .bootstrap-tagsinput .tag {
   margin-right: 2px;
   color: black;
 }
+
 .bootstrap-tagsinput .tag [data-role="remove"] {
   margin-left: 8px;
   cursor: pointer;
 }
+
 .bootstrap-tagsinput .tag [data-role="remove"]:after {
   content: "x";
   padding: 0px 2px;
 }
+
 .bootstrap-tagsinput .tag [data-role="remove"]:hover {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
 }
+
 .bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 
 /* Preloader */
 .ctn-preloader {
-	align-items: center;
+  align-items: center;
   cursor: none;
-	display: flex;
+  display: flex;
   height: 100%;
   justify-content: center;
-	position: fixed;
-	left: 0;
+  position: fixed;
+  left: 0;
   top: 0;
-	width: 100%;
+  width: 100%;
   z-index: 900;
 }
 
 .ctn-preloader .animation-preloader {
-	position: absolute;
+  position: absolute;
   z-index: 100;
 }
 
 /* Spinner cargando */
 .ctn-preloader .animation-preloader .spinner {
   animation: spinner 1s infinite linear;
-	border-radius: 50%;
+  border-radius: 50%;
   border: 3px solid rgba(0, 0, 0, 0.2);
-  border-top-color: #000000; /* No se identa por orden alfabetico para que no lo sobre-escriba */
+  border-top-color: #000000;
+  /* No se identa por orden alfabetico para que no lo sobre-escriba */
   height: 9em;
   margin: 0 auto 3.5em auto;
   width: 9em;
@@ -216,8 +235,8 @@
 /* Texto cargando */
 .ctn-preloader .animation-preloader .txt-loading {
   font: bold 5em 'Montserrat', sans-serif;
-	text-align: center;
-	user-select: none;
+  text-align: center;
+  user-select: none;
 }
 
 .ctn-preloader .animation-preloader .txt-loading .letters-loading:before {
@@ -232,8 +251,8 @@
 }
 
 .ctn-preloader .animation-preloader .txt-loading .letters-loading {
-	color: rgba(0, 0, 0, 0.2);
-	position: relative;
+  color: rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 
 .ctn-preloader .animation-preloader .txt-loading .letters-loading:nth-child(2):before {
@@ -263,7 +282,7 @@
 .ctn-preloader .loader-section {
   background-color: #ffffff;
   height: 100%;
-	position: fixed;
+  position: fixed;
   top: 0;
   width: calc(50% + 1px);
 }
@@ -295,17 +314,18 @@
 
 /* Animación del preloader */
 @keyframes spinner {
-	to {
-		transform: rotateZ(360deg);
-	}
+  to {
+    transform: rotateZ(360deg);
+  }
 }
 
 /* Animación de las letras cargando del preloader */
 @keyframes letters-loading {
+
   0%,
   75%,
   100% {
-  	opacity: 0;
+    opacity: 0;
     transform: rotateY(-90deg);
   }
 
@@ -318,29 +338,31 @@
 
 /* Tamaño de portatil hacia atras (portatil, tablet, celular) */
 @media screen and (max-width: 767px) {
-	/* Preloader */
-	/* Spinner cargando */	
-	.ctn-preloader .animation-preloader .spinner {
-		height: 8em;
-		width: 8em;
-	}
 
-	/* Texto cargando */
-	.ctn-preloader .animation-preloader .txt-loading {
-	  font: bold 3.5em 'Montserrat', sans-serif;
-	}
+  /* Preloader */
+  /* Spinner cargando */
+  .ctn-preloader .animation-preloader .spinner {
+    height: 8em;
+    width: 8em;
+  }
+
+  /* Texto cargando */
+  .ctn-preloader .animation-preloader .txt-loading {
+    font: bold 3.5em 'Montserrat', sans-serif;
+  }
 }
 
 @media screen and (max-width: 500px) {
-	/* Prelaoder */
-	/* Spinner cargando */
-	.ctn-preloader .animation-preloader .spinner {
-		height: 7em;
-		width: 7em;
-	}
 
-	/* Texto cargando */
-	.ctn-preloader .animation-preloader .txt-loading {
-	  font: bold 2em 'Montserrat', sans-serif;
-	}
+  /* Prelaoder */
+  /* Spinner cargando */
+  .ctn-preloader .animation-preloader .spinner {
+    height: 7em;
+    width: 7em;
+  }
+
+  /* Texto cargando */
+  .ctn-preloader .animation-preloader .txt-loading {
+    font: bold 2em 'Montserrat', sans-serif;
+  }
 }
